--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,10 +18,10 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion 28
 
-    compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
-    }
+    // compileOptions {
+    //     sourceCompatibility 1.8
+    //     targetCompatibility 1.8
+    // }
 
     lintOptions {
         disable 'InvalidPackage'
