--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   #cloud_firestore: ^0.9.7+2
-  cloud_firestore: ^0.12.9+5
+  #cloud_firestore: ^0.12.9+5
+  cloud_firestore: ^0.13.4+2
   image_picker: ^0.6.0+2
   #firebase_storage: ^1.1.0
   #firebase_auth: ^0.8.3
